force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Shows type both for Task + Event, used with WF rule</description>
    <inlineHelpText>Shows type both for Task + Event, used with WF rule</inlineHelpText>
    <label>Activity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>