force-app/main/default/objects/Activity/fields/Components__c.field-meta.xml
<CustomField>
    <fullName>Components__c</fullName>
    <description>Use for DK implementations</description>
    <label>Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Conferences</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>TP4</fullName>
            </value>
            <value>
                <fullName>TP7</fullName>
            </value>
            <value>
                <fullName>TP8</fullName>
            </value>
            <value>
                <fullName>TP9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>