force-app/main/default/objects/Activity/fields/Implementation_Tags__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Tags__c</fullName>
    <description>Documentation: https://docs.google.com/document/d/1HfZ-sCf0O6Xo6s2dPZygLlo2HTNzCYXbh0z1aAzCYhg/edit?ts=60a60c5c
Order 20/5-2021 by Implemetation DK, made by Astrid S</description>
    <inlineHelpText>Documentation: https://docs.google.com/document/d/1HfZ-sCf0O6Xo6s2dPZygLlo2HTNzCYXbh0z1aAzCYhg/edit?ts=60a60c5c</inlineHelpText>
    <label>Implementation Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prøver</fullName>
            </value>
            <value>
                <fullName>QM</fullName>
            </value>
            <value>
                <fullName>Tests</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Didactic(s)</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Physics/chemistry</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Nature/Technology</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Religion</fullName>
            </value>
            <value>
                <fullName>Social Science</fullName>
            </value>
            <value>
                <fullName>Technological literacy</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Crafts/Design</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Home Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>