force-app/main/default/objects/Activity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number from contact</description>
    <inlineHelpText>Phone number from contact</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>