force-app/main/default/objects/Activity/fields/Portal_Code__c.field-meta.xml
<CustomField>
    <fullName>Portal_Code__c</fullName>
    <label>Portal Description</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BH Børnehaveklassen</fullName>
            </value>
            <value>
                <fullName>BI Biologi</fullName>
            </value>
            <value>
                <fullName>BK-IN Billedkunst – indskoling</fullName>
            </value>
            <value>
                <fullName>BK-ME Billedkunst - mellemtrin</fullName>
            </value>
            <value>
                <fullName>DA-IN Dansk - indskoling</fullName>
            </value>
            <value>
                <fullName>DA-ME Dansk - mellemtrin</fullName>
            </value>
            <value>
                <fullName>DA-UD Dansk - udskoling</fullName>
            </value>
            <value>
                <fullName>EN-IN Engelsk - indskoling</fullName>
            </value>
            <value>
                <fullName>EN-ME Engelsk - mellemtrin</fullName>
            </value>
            <value>
                <fullName>EN-UD Engelsk - udskoling</fullName>
            </value>
            <value>
                <fullName>FK Fysik/Kemi</fullName>
            </value>
            <value>
                <fullName>GE Geografi</fullName>
            </value>
            <value>
                <fullName>HD Håndværk og Design</fullName>
            </value>
            <value>
                <fullName>HI-ME Historie - mellemtrin</fullName>
            </value>
            <value>
                <fullName>HI-UD Historie - udskoling</fullName>
            </value>
            <value>
                <fullName>ID-IN Idræt - indskoling</fullName>
            </value>
            <value>
                <fullName>ID-ME Idræt - mellemtrin</fullName>
            </value>
            <value>
                <fullName>ID-UD Idræt – udskoling</fullName>
            </value>
            <value>
                <fullName>MA-ML Matematik - mellemtrin</fullName>
            </value>
            <value>
                <fullName>MA-UD Matematik - udskoling</fullName>
            </value>
            <value>
                <fullName>MK Madkundskab</fullName>
            </value>
            <value>
                <fullName>MU-IN Musik - indskoling</fullName>
            </value>
            <value>
                <fullName>MU-ME Musik - mellemtrin</fullName>
            </value>
            <value>
                <fullName>NT-IN Natur/Teknologi - indskoling</fullName>
            </value>
            <value>
                <fullName>NT-ME Natur/Teknologi – mellemtrin</fullName>
            </value>
            <value>
                <fullName>RE-IN Religion - indskoling</fullName>
            </value>
            <value>
                <fullName>RE-ME Religion - mellemtrin</fullName>
            </value>
            <value>
                <fullName>RE-UD Religion - udskoling</fullName>
            </value>
            <value>
                <fullName>SA Samfundsfag</fullName>
            </value>
            <value>
                <fullName>TY-ME Tysk - mellemtrin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>