force-app/main/default/objects/Activity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Book Editor</fullName>
            </value>
            <value>
                <fullName>Book Date</fullName>
            </value>
            <value>
                <fullName>Create Agenda</fullName>
            </value>
            <value>
                <fullName>Prepare Course</fullName>
            </value>
            <value>
                <fullName>Execute Course</fullName>
            </value>
            <value>
                <fullName>Gather Feedback</fullName>
            </value>
            <value>
                <fullName>Course Follow Up</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>